lucky points so you can get infinity EP and break the game and bug fixes

--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,6 @@ table {
 #autoclickers td {
   font-size: 20px;
 }
+#lucky {
+  position: absolute;
+}
